--- a/cms/package.json
+++ b/cms/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "server": "nodemon server.js"
   },
   "private": true,
   "dependencies": {
@@ -22,8 +23,12 @@
     "body-parser": "^2.2.0",
     "bootstrap": "^3.4.1",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^17.0.0",
     "express": "^4.21.2",
+    "mongoose": "^7.8.7",
+    "mongoose-unique-validator": "^4.0.1",
     "morgan": "^1.10.0",
+    "nodemon": "^3.1.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
